--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -1,12 +1,6 @@
 # Filesystem configuration path, for the application properties file
 spring.config.import = optional:file:/etc/eseal/conf.d/application.properties
 
-# Configuration values that are needed for harica http client
-# harica rest api endpoint
-eseal.harica.endpoint = test.harica.com
-# harica rest api endpoint username
-eseal.harica.username = test-user
-# harica rest api endpoint password
-eseal.harica.password = test-password
-# harica rest api totp key
-eseal.harica.key = test-key
+# Configuration values that are needed for the remote provider's http client
+# remote provider rest api endpoint
+eseal.remote.provider.endpoint = test.provider.com
