--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -1,9 +1,3 @@
-# Configuration values that are needed for harica http client
-# harica rest api endpoint
-eseal.harica.endpoint = test.harica.com
-# harica rest api endpoint username
-eseal.harica.username = test-user
-# harica rest api endpoint password
-eseal.harica.password = test-password
-# harica rest api totp key
-eseal.harica.key = test-key
+# Configuration values that are needed for th remove provider http client
+# remove provider rest api endpoint
+eseal.remote.provider.endpoint = test.provider.com
