--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.config.import = optional:file:/etc/eseal/conf.d/application.properties
 # Configuration values that are needed for the remote provider's http client
 # remote provider rest api endpoint
 eseal.remote.provider.endpoint = test.provider.com
+# remote provider enable retry on failed requests
+eseal.remote.provider.retry.enabled = true
+# remote provider how many times we should retry failed requests
+eseal.remote.provider.retry.counter = 3
+# remote provider how much time should the client wait before the next retry in seconds
+eseal.remote.provider.retry.interval = 5
+# remote provider time threshold that indicates that we should generate a new totp token
+# for time values lower than the threshold
+eseal.remote.provider.totp.refresh.seconds.wait = 5
