--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -1,3 +1,12 @@
 # Configuration values that are needed for th remove provider http client
-# remove provider rest api endpoint
+# remote provider rest api endpoint
 eseal.remote.provider.endpoint = test.provider.com
+# remote provider enable retry on failed requests
+eseal.remote.provider.retry.enabled = true
+# remote provider how many times we should retry failed requests
+eseal.remote.provider.retry.counter = 3
+# remote provider how much time should the client wait before the next retry in seconds
+eseal.remote.provider.retry.interval = 5
+# remote provider time threshold that indicates that we should generate a new totp token
+# for time values lower than the threshold
+eseal.remote.provider.totp.refresh.seconds.wait = 5
