--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -13,3 +13,11 @@ eseal.remote.provider.retry.interval = 5
 # remote provider time threshold that indicates that we should generate a new totp token
 # for time values lower than the threshold
 eseal.remote.provider.totp.refresh.seconds.wait = 5
+# remote provider verify the API certs
+eseal.remote.provider.tls.verify = true
+# remote provider client truststore that contains the API certs
+eseal.remote.provider.truststore.file = remote_provider_http_eseal_client.truststore.jks
+# remote provider client truststore password to access
+eseal.remote.provider.truststore.password = providerpass
+# remote provider client truststore type
+eseal.remote.provider.truststore.type = JKS
