--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -16,3 +16,22 @@ eseal.remote.provider.truststore.file = remote_provider_http_eseal_client.trusts
 eseal.remote.provider.truststore.password = providerpass
 # remote provider client truststore type
 eseal.remote.provider.truststore.type = JKS
+#### Validation properties #####
+# official journal client keystore
+eseal.validation.oj.keystore.filename = oj.keystore.p12
+# official journal client keystore type
+eseal.validation.oj.keystore.type = PKCS12
+# official journal client keystore password
+eseal.validation.oj.keystore.password = dss-password
+# official journal url
+eseal.validation.oj.url = https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.C_.2019.276.01.0001.01.ENG
+# european list of trusted lists URL
+eseal.validation.lotl.url = https://ec.europa.eu/tools/lotl/eu-lotl.xml
+# keep refreshing the lotl sources on a fixed interval
+eseal.validation.lotl.refresh.enable = true
+# initial delay for the lotl sources online refresh in milliseconds
+eseal.validation.lotl.refresh.initial.delay = 0
+# online refresh interval for the lotl sources in milliseconds
+eseal.validation.lotl.refresh.interval = 21600000
+# lotl trust sources filesystem cache
+eseal.validation.lotl.cache.dir = /etc/eseal/conf.d/
