--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+# Docusaurus 2
+website/.docusaurus/
+website/node_modules/
+website/blog/
+website/build/
