ET-83 Mock provider flask endpoint

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# Python #
+__pycache__
+mock_provider_endpoint.log
 
 # Docusaurus 2
 website/.docusaurus/
