--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -16,6 +16,8 @@ eseal.remote.provider.truststore.file = remote_provider_http_eseal_client.trusts
 eseal.remote.provider.truststore.password = providerpass
 # remote provider client truststore type
 eseal.remote.provider.truststore.type = JKS
+# remote provider verify the API certs
+eseal.remote.provider.tls.verify = true
 #### Validation properties #####
 # official journal client keystore
 eseal.validation.oj.keystore.filename = oj.keystore.p12
