ET-84 Executable JAR and service file

--- a/eseal/pom.xml
+++ b/eseal/pom.xml
@@ -149,6 +149,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!--Configuration for executable jar-->
+				<configuration>
+					<executable>true</executable>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
