--- a/eseal/pom.xml
+++ b/eseal/pom.xml
@@ -155,6 +155,34 @@
 				</configuration>
 			</plugin>
 
+
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>2.9.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<phase>validate</phase>
+					</execution>
+				</executions>
+				<configuration>
+
+					<!-- define a language-specific format -->
+					<java>
+						<!-- apply a specific flavor of google-java-format -->
+						<googleJavaFormat>
+							<version>1.7</version>
+							<style>GOOGLE</style>
+						</googleJavaFormat>
+
+					</java>
+				</configuration>
+			</plugin>
+
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -175,7 +203,7 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>validate</id>
+						<id>validate-sources</id>
 						<phase>validate</phase>
 						<goals>
 							<goal>check</goal>
