--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -1,39 +1,39 @@
 # Configuration values that are needed for th remove provider http client
 # remote provider rest api endpoint
-eseal.remote.provider.endpoint = test.provider.com
+eseal.remote.provider.endpoint=test.provider.com
 # remote provider enable retry on failed requests
-eseal.remote.provider.retry.enabled = true
+eseal.remote.provider.retry.enabled=true
 # remote provider how many times we should retry failed requests
-eseal.remote.provider.retry.counter = 3
+eseal.remote.provider.retry.counter=3
 # remote provider how much time should the client wait before the next retry in seconds
-eseal.remote.provider.retry.interval = 5
+eseal.remote.provider.retry.interval=5
 # remote provider time threshold that indicates that we should generate a new totp token
 # for time values lower than the threshold
-eseal.remote.provider.totp.refresh.seconds.wait = 5
+eseal.remote.provider.totp.refresh.seconds.wait=5
 # remote provider client truststore that contains the API's certs
-eseal.remote.provider.truststore.file = remote_provider_http_eseal_client.truststore.jks
+eseal.remote.provider.truststore.file=remote_provider_http_eseal_client.truststore.jks
 # remote provider client truststore password to access
-eseal.remote.provider.truststore.password = providerpass
+eseal.remote.provider.truststore.password=providerpass
 # remote provider client truststore type
-eseal.remote.provider.truststore.type = JKS
+eseal.remote.provider.truststore.type=JKS
 # remote provider verify the API certs
-eseal.remote.provider.tls.verify = true
+eseal.remote.provider.tls.verify=true
 #### Validation properties #####
 # official journal client keystore
-eseal.validation.oj.keystore.filename = oj.keystore.p12
+eseal.validation.oj.keystore.filename=oj.keystore.p12
 # official journal client keystore type
-eseal.validation.oj.keystore.type = PKCS12
+eseal.validation.oj.keystore.type=PKCS12
 # official journal client keystore password
-eseal.validation.oj.keystore.password = dss-password
+eseal.validation.oj.keystore.password=dss-password
 # official journal url
-eseal.validation.oj.url = https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.C_.2019.276.01.0001.01.ENG
+eseal.validation.oj.url=https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.C_.2019.276.01.0001.01.ENG
 # european list of trusted lists URL
-eseal.validation.lotl.url = https://ec.europa.eu/tools/lotl/eu-lotl.xml
+eseal.validation.lotl.url=https://ec.europa.eu/tools/lotl/eu-lotl.xml
 # keep refreshing the lotl sources on a fixed interval
-eseal.validation.lotl.refresh.enable = true
+eseal.validation.lotl.refresh.enable=true
 # initial delay for the lotl sources online refresh in milliseconds
-eseal.validation.lotl.refresh.initial.delay = 0
+eseal.validation.lotl.refresh.initial.delay=0
 # online refresh interval for the lotl sources in milliseconds
-eseal.validation.lotl.refresh.interval = 21600000
+eseal.validation.lotl.refresh.interval=21600000
 # lotl trust sources filesystem cache
-eseal.validation.lotl.cache.dir = /etc/eseal/conf.d/
+eseal.validation.lotl.cache.dir=/etc/eseal/conf.d/
