ET-105 Introduce TSPSource properties and bean

--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Filesystem configuration path, for the application properties file
 spring.config.import=optional:file:/etc/eseal/conf.d/application.properties
+
 # Configuration values that are needed for the remote provider's http client
 # remote provider rest api endpoint
 eseal.remote.provider.endpoint=test.provider.com
@@ -20,6 +21,7 @@ eseal.remote.provider.truststore.file=remote_provider_http_eseal_client.truststo
 eseal.remote.provider.truststore.password=providerpass
 # remote provider client truststore type
 eseal.remote.provider.truststore.type=JKS
+
 #### Validation properties #####
 # official journal client keystore
 eseal.validation.oj.keystore.filename=oj.keystore.p12
@@ -39,3 +41,9 @@ eseal.validation.lotl.refresh.initial.delay=0
 eseal.validation.lotl.refresh.interval=21600000
 # lotl trust sources filesystem cache
 eseal.validation.lotl.cache.dir=/etc/eseal/conf.d/
+
+### Timestamping Provider properties ###
+eseal.tsp.url = https://timestamp.aped.gov.gr/qtss
+eseal.tsp.truststore.type = JKS
+eseal.tsp.truststore.file = aped.truststore.jks
+eseal.tsp.truststore.password = apedts
