--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -49,7 +49,7 @@ eseal.validation.lotl.extra.truststore.password=extra-tl
 eseal.validation.lotl.extra.truststore.type=JKS
 
 ### Timestamping Provider properties ###
-eseal.tsp.url = https://timestamp.aped.gov.gr/qtss
-eseal.tsp.truststore.type = JKS
-eseal.tsp.truststore.file = aped.truststore.jks
-eseal.tsp.truststore.password = apedts
+eseal.tsp.aped.url = https://timestamp.aped.gov.gr/qtss
+eseal.tsp.aped.truststore.type = JKS
+eseal.tsp.aped.truststore.file = aped.truststore.jks
+eseal.tsp.aped.truststore.password = apedts
