--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -43,3 +43,8 @@ eseal.validation.lotl.extra.truststore.file=extra-lotl.truststore.jks
 eseal.validation.lotl.extra.truststore.password=extra-tl
 # extra lotl truststore type
 eseal.validation.lotl.extra.truststore.type=JKS
+### Timestamping Provider properties ###
+eseal.tsp.aped.url = https://timestamp.aped.gov.gr/qtss
+eseal.tsp.aped.truststore.type = JKS
+eseal.tsp.aped.truststore.file = aped.truststore.jks
+eseal.tsp.aped.truststore.password = apedts
