ET-81 Truststore that contains extra material needed to access resources during the LOTL init

--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -37,3 +37,9 @@ eseal.validation.lotl.refresh.initial.delay=0
 eseal.validation.lotl.refresh.interval=21600000
 # lotl trust sources filesystem cache
 eseal.validation.lotl.cache.dir=/etc/eseal/conf.d/
+# truststore containing extra trust certs needed during the initialization of the LOTL source
+eseal.validation.lotl.extra.truststore.file=extra-lotl.truststore.jks
+# extra lotl truststore password
+eseal.validation.lotl.extra.truststore.password=extra-tl
+# extra lotl truststore type
+eseal.validation.lotl.extra.truststore.type=JKS
