ET-113 Add support for HARICA QTSA

--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -29,7 +29,7 @@ eseal.validation.oj.keystore.filename=oj.keystore.p12
 eseal.validation.oj.keystore.type=PKCS12
 # official journal client keystore password
 eseal.validation.oj.keystore.password=dss-password
-# official journal url
+# official journal host
 eseal.validation.oj.url=https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.C_.2019.276.01.0001.01.ENG
 # european list of trusted lists URL
 eseal.validation.lotl.url=https://ec.europa.eu/tools/lotl/eu-lotl.xml
@@ -49,7 +49,29 @@ eseal.validation.lotl.extra.truststore.password=extra-tl
 eseal.validation.lotl.extra.truststore.type=JKS
 
 ### Timestamping Provider properties ###
-eseal.tsp.aped.url = https://timestamp.aped.gov.gr/qtss
-eseal.tsp.aped.truststore.type = JKS
-eseal.tsp.aped.truststore.file = aped.truststore.jks
-eseal.tsp.aped.truststore.password = apedts
+
+##### APED #####
+# aped tsa url
+eseal.tsa.aped.url=https://timestamp.aped.gov.gr/qtss
+# aped tsa truststore type
+eseal.tsa.aped.truststore.type=JKS
+# aped tsa truststore file
+eseal.tsa.aped.truststore.file=aped.truststore.jks
+# aped tsa truststore password
+eseal.tsa.aped.truststore.password=apedts
+
+##### HARICA #####
+# harica tsa url
+eseal.tsa.harica.url=https://qts.harica.gr
+# harica tsa truststore type
+eseal.tsa.harica.truststore.type=JKS
+# harica tsa truststore file
+eseal.tsa.harica.truststore.file=harica.truststore.jks
+# harica tsa truststore password
+eseal.tsa.harica.truststore.password=harica-qtsa
+# harica tsa host
+eseal.tsa.harica.host=qts.harica.gr
+# harica tsa basic auth username
+eseal.tsa.harica.username=test-user
+# harica tsa basic auth password
+eseal.tsa.harica.password=test-pass
