--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -44,7 +44,18 @@ eseal.validation.lotl.extra.truststore.password=extra-tl
 # extra lotl truststore type
 eseal.validation.lotl.extra.truststore.type=JKS
 ### Timestamping Provider properties ###
-eseal.tsp.aped.url = https://timestamp.aped.gov.gr/qtss
-eseal.tsp.aped.truststore.type = JKS
-eseal.tsp.aped.truststore.file = aped.truststore.jks
-eseal.tsp.aped.truststore.password = apedts
+
+##### APED #####
+eseal.tsp.aped.url=https://timestamp.aped.gov.gr/qtss
+eseal.tsa.aped.truststore.type=JKS
+eseal.tsa.aped.truststore.file=aped.truststore.jks
+eseal.tsa.aped.truststore.password=apedts
+
+##### HARICA #####
+eseal.tsa.harica.url=https://qts.harica.gr
+eseal.tsa.harica.truststore.type=JKS
+eseal.tsa.harica.truststore.file=harica.truststore.jks
+eseal.tsa.harica.truststore.password=harica-qtsa
+eseal.tsa.harica.host=qts.harica.gr
+eseal.tsa.harica.username=test-user
+eseal.tsa.harica.password=test-pass
