ET-111 Remote provider OCSP error should have its own API error

--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -29,7 +29,7 @@ eseal.validation.oj.keystore.filename=oj.keystore.p12
 eseal.validation.oj.keystore.type=PKCS12
 # official journal client keystore password
 eseal.validation.oj.keystore.password=dss-password
-# official journal host
+# official journal url
 eseal.validation.oj.url=https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.C_.2019.276.01.0001.01.ENG
 # european list of trusted lists URL
 eseal.validation.lotl.url=https://ec.europa.eu/tools/lotl/eu-lotl.xml
