ET-114 Incorporate a remote PKCS1 signature into a PDF document

--- a/eseal/pom.xml
+++ b/eseal/pom.xml
@@ -129,6 +129,12 @@
             <artifactId>jackson-jaxrs-json-provider</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>0.10.3</version>
+        </dependency>
+
     </dependencies>
 
     <!-- Repository for the dss module -->
