ET-118 Enhancements to visible signature

--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -72,6 +72,6 @@ eseal.tsa.harica.truststore.password=harica-qtsa
 # harica tsa host
 eseal.tsa.harica.host=qts.harica.gr
 # harica tsa basic auth username
-eseal.tsa.harica.username=test-user
+eseal.tsa.harica.username=STE
 # harica tsa basic auth password
-eseal.tsa.harica.password=test-pass
+eseal.tsa.harica.password=xRJbYDn7tgP8mhIhdN6te3oDo5UUKJY7
