--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.config.import=optional:file:/etc/eseal/conf.d/application.properties
 
 # Configuration values that are needed for the remote provider's http client
 # remote provider rest api endpoint
-eseal.remote.provider.endpoint=test.provider.com
+eseal.remote.provider.endpoint=rsign-api.harica.gr
 # remote provider enable retry on failed requests
 eseal.remote.provider.retry.enabled=true
 # remote provider how many times we should retry failed requests
