minor changes to scripts to use version-agnostic eseal.jar

--- a/scripts/eseal.service
+++ b/scripts/eseal.service
@@ -6,7 +6,7 @@ Documentation=https://argoeu.github.io/gr.grnet.eseal/
 User=unisys
 Group=unisys
 WorkingDirectory=/opt/eseal
-ExecStart=/opt/eseal/eseal-0.0.1-SNAPSHOT.jar
+ExecStart=/opt/eseal/eseal.jar
 SyslogIdentifier=eseal
 Restart=on-failure
 RestartSec=5s
