--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# Filesystem configuration path, for the application properties file
-spring.config.import=optional:file:/etc/eseal/conf.d/application.properties
+# Filesystem configuration path, for the application (optional) properties file with settings that override the below settings?
+spring.config.import=optional:file:/opt/eseal/application.properties
 
 # Configuration values that are needed for the remote provider's http client
 # remote provider rest api endpoint
@@ -40,7 +40,7 @@ eseal.validation.lotl.refresh.initial.delay=0
 # online refresh interval for the lotl sources in milliseconds
 eseal.validation.lotl.refresh.interval=21600000
 # lotl trust sources filesystem cache
-eseal.validation.lotl.cache.dir=/etc/eseal/conf.d/
+eseal.validation.lotl.cache.dir=/opt/eseal/
 # truststore containing extra trust certs needed during the initialization of the LOTL source
 eseal.validation.lotl.extra.truststore.file=extra-lotl.truststore.jks
 # extra lotl truststore password
