added JDeveloper project descriptor, removed nb xml files, pom.xml adjusted to mirror JDeveloper 12c JPR file

--- a/eseal-connector/pom.xml
+++ b/eseal-connector/pom.xml
@@ -6,7 +6,12 @@
 	<groupId>gr.unisystems</groupId>
 	<artifactId>eseal-connector</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+        <packaging>jar</packaging>
+        <parent>
+          <groupId>gr.unisystems.osddydd</groupId>
+          <artifactId>OsddyddApplication</artifactId>
+          <version>3.1.7-SNAPSHOT</version>
+        </parent>
 	<name>eseal-connector</name>
 	<description>service methods to call e-Seal API</description>
 
@@ -16,59 +21,56 @@
 	</properties>
 
 	<dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.26</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+      <type>jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.26</version>
+      <type>jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.adf.library</groupId>
+      <artifactId>JAX-RS-Jersey-Jackson-Bundled</artifactId>
+      <version>12.1.3-0-0</version>
+      <type>pom</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.adf.library</groupId>
+      <artifactId>JAX-RS-Jersey-Bundled</artifactId>
+      <version>12.1.3-0-0</version>
+      <type>pom</type>
+      <scope>compile</scope>
+    </dependency>
+      <!-- this one is for manually created Jersey client as in https://gist.github.com/theotherian/8312354 -->      
       <dependency>
-         <groupId>javax.enterprise</groupId>
-         <artifactId>cdi-api</artifactId>
-         <version>2.0</version>
-      </dependency>      
-      <dependency>
-          <groupId>org.glassfish.jersey.core</groupId>
-          <artifactId>jersey-client</artifactId>
-          <version>2.25.1</version>
-      </dependency>
-      <dependency>
-          <groupId>org.glassfish.jersey.media</groupId>
-          <artifactId>jersey-media-json-jackson</artifactId>
-          <version>2.25.1</version>
-      </dependency>      
-      <!-- lombok 
-      <dependency>
-         <groupId>org.projectlombok</groupId>
-         <artifactId>lombok</artifactId>
-         <version>1.18.22</version>
-         <scope>provided</scope>
-      </dependency>
-      -->
-      <!-- needed for Lombok's @Slf4j to work properly -->
-      <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>1.7.26</version>
-      </dependency>
-      <dependency>
-          <groupId>commons-io</groupId>
-          <artifactId>commons-io</artifactId>
-          <version>2.11.0</version>
-      </dependency>      
-      <dependency> <!-- hoping an external program using this library will provide its own logging implementation -->
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-simple</artifactId>
-          <version>1.7.26</version>
-          <scope>test</scope>
-      </dependency>      
-	 <dependency>
-	  <groupId>junit</groupId>
-	  <artifactId>junit</artifactId>
-	  <version>4.13.1</version>
-	  <scope>test</scope>
-	 </dependency>
-	 <dependency>
-	  <groupId>org.hamcrest</groupId>
-	  <artifactId>hamcrest-core</artifactId>
-	  <version>1.3</version>
-	  <scope>test</scope>
-	 </dependency>
-	</dependencies>
+         <groupId>com.sun.jersey.contribs</groupId>
+         <artifactId>jersey-apache-client</artifactId>
+         <version>1.18</version>
+      </dependency>   
+        <!-- https://mvnrepository.com/artifact/commons-httpclient/commons-httpclient -->
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
+      
+    
+  </dependencies>
 
 	<build>
 		<plugins>
@@ -101,8 +103,29 @@
                 </execution>
             </executions>
 
-        </plugin>         
-      </plugins>
+        </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.1</version>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>
+                  src/main/resources/
+                </source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
 	</build>
 
 </project>
