cherry-picked ET-130 AIADefaultSource should use the CommonsDataLoader that somehow didn't end up in the merge

--- a/eseal/pom.xml
+++ b/eseal/pom.xml
@@ -139,7 +139,7 @@
     </dependencies>
 
     <!-- Repository for the dss module -->
-    <!-- dedicated repositories are no longer necessary for DSS 5.11.1 and higher as they are not being released in Maven Central
+    <!-- dedicated repositories are no longer necessary for DSS 5.11.1 and higher as they are now being released in Maven Central
     <repositories>
         <repository>
             <id>cefdigital</id>
