--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -1,17 +1,17 @@
 # Configuration values that are needed for th remove provider http client
 # remote provider rest api endpoint
-eseal.remote.provider.endpoint=test.provider.com
+eseal.remote.provider.endpoint=rsign-api-dev.harica.gr
 # remote provider enable retry on failed requests
-eseal.remote.provider.retry.enabled=true
+eseal.remote.provider.retry.enabled=false
 # remote provider how many times we should retry failed requests
 eseal.remote.provider.retry.counter=3
 # remote provider how much time should the client wait before the next retry in seconds
 eseal.remote.provider.retry.interval=5
 # remote provider http client connection options(passed to underlying apache http client)
-# used for both pkcs1 service data loaders and remote provider http client
-eseal.remote.provider.socket.connect.timeout = 60
-eseal.remote.provider.connect.timeout = 60
-eseal.remote.provider.request.connect.timeout = 60
+# used for both pkcs1 service data loaders and remote provider http client (in ms)
+eseal.remote.provider.socket.connect.timeout = 6000
+eseal.remote.provider.connect.timeout = 6000
+eseal.remote.provider.request.connect.timeout = 6000
 # remote provider time threshold that indicates that we should generate a new totp token
 # for time values lower than the threshold
 eseal.remote.provider.totp.refresh.seconds.wait=5
