upgraded DSS to 5.11 because validation of file failed for RSA 2048

--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -11,7 +11,7 @@ eseal.remote.provider.retry.counter=3
 # remote provider how much time should the client wait before the next retry in seconds
 eseal.remote.provider.retry.interval=5
 # remote provider http client connection options(passed to underlying apache http client)
-# used for both pkcs1 service data loaders and remote provider http client
+# used for both pkcs1 service data loaders and remote provider http client (in seconds)
 eseal.remote.provider.socket.connect.timeout = 60
 eseal.remote.provider.connect.timeout = 60
 eseal.remote.provider.request.connect.timeout = 60
