--- a/eseal/pom.xml
+++ b/eseal/pom.xml
@@ -16,7 +16,7 @@
     </description>
     <properties>
         <java.version>1.8</java.version>
-        <dss.version>5.9</dss.version>
+        <dss.version>5.11.1</dss.version>
     </properties>
     <dependencies>
         <dependency>
@@ -67,14 +67,14 @@
             <version>3.0</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>6.0.13.Final</version>
         </dependency>
 
         <!-- Verify validation annotations usage at compile time -->
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator-annotation-processor</artifactId>
             <version>6.0.13.Final</version>
         </dependency>
@@ -137,15 +137,6 @@
         </dependency>
 
     </dependencies>
-
-    <!-- Repository for the dss module -->
-    <repositories>
-        <repository>
-            <id>cefdigital</id>
-            <name>cefdigital</name>
-            <url>https://ec.europa.eu/cefdigital/artifact/content/repositories/esignaturedss/</url>
-        </repository>
-    </repositories>
 
     <build>
         <plugins>
