--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -10,6 +10,11 @@ eseal.remote.provider.retry.enabled=true
 eseal.remote.provider.retry.counter=3
 # remote provider how much time should the client wait before the next retry in seconds
 eseal.remote.provider.retry.interval=5
+# remote provider http client connection options(passed to underlying apache http client)
+# used for both pkcs1 service data loaders and remote provider http client
+eseal.remote.provider.socket.connect.timeout = 60
+eseal.remote.provider.connect.timeout = 60
+eseal.remote.provider.request.connect.timeout = 60
 # remote provider time threshold that indicates that we should generate a new totp token
 # for time values lower than the threshold
 eseal.remote.provider.totp.refresh.seconds.wait=5
