--- a/eseal/pom.xml
+++ b/eseal/pom.xml
@@ -67,14 +67,14 @@
             <version>3.0</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>6.0.13.Final</version>
         </dependency>
 
         <!-- Verify validation annotations usage at compile time -->
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator-annotation-processor</artifactId>
             <version>6.0.13.Final</version>
         </dependency>
