minor changes on info about the scripts folder

--- a/scripts/eseal.conf
+++ b/scripts/eseal.conf
@@ -1,2 +1,2 @@
-JAVA_OPTS='-Dlogging.config=file:/opt/eseal/logback.xml'
+JAVA_OPTS='-Dlogging.config=file:/opt/eseal/logback.xml -Dserver.port=8001'
 LOG_FOLDER=/opt/eseal/log
