added Maven profile for harica test server

--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.config.import=optional:file:/opt/eseal/application.properties
 
 # Configuration values that are needed for the remote provider's http client
 # remote provider rest api endpoint
-eseal.remote.provider.endpoint=rsign-api.harica.gr
+eseal.remote.provider.endpoint=@remote-provider-host@
 # remote provider enable retry on failed requests
 eseal.remote.provider.retry.enabled=true
 # remote provider how many times we should retry failed requests
