1. now using composite TSP source (needs fixing order of execution) 2. added additional trusted cert source 3. disabled integration tests - TODO: add testcases for 1 and 2

--- a/eseal/src/test/resources/application-test.properties
+++ b/eseal/src/test/resources/application-test.properties
@@ -1,3 +1,5 @@
+logging.level.root=INFO
+
 # Configuration values that are needed for th remove provider http client
 # remote provider rest api endpoint
 eseal.remote.provider.endpoint=rsign-api-dev.harica.gr
@@ -33,7 +35,8 @@ eseal.validation.oj.keystore.password=dss-password
 # official journal url
 eseal.validation.oj.url=https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=uriserv:OJ.C_.2019.276.01.0001.01.ENG
 # european list of trusted lists URL
-eseal.validation.lotl.url=https://ec.europa.eu/tools/lotl/eu-lotl.xml
+# skip other lists apart from the greek one for testing
+eseal.validation.lotl.url=https://www.eett.gr/tsl/EL-TSL.xml
 # keep refreshing the lotl sources on a fixed interval
 eseal.validation.lotl.refresh.enable=true
 # initial delay for the lotl sources online refresh in milliseconds
@@ -51,7 +54,7 @@ eseal.validation.lotl.extra.truststore.type=JKS
 ### Timestamping Provider properties ###
 
 ##### APED #####
-eseal.tsp.aped.url=https://timestamp.aped.gov.gr/qtss
+eseal.tsa.aped.url=https://timestamp.aped.gov.gr/qtss
 eseal.tsa.aped.truststore.type=JKS
 eseal.tsa.aped.truststore.file=aped.truststore.jks
 eseal.tsa.aped.truststore.password=apedts
