changed TSP source to composite, added parameterized custom trust source and LOTL trust source to PKCS1 service certificate verifier

--- a/eseal/pom.xml
+++ b/eseal/pom.xml
@@ -150,7 +150,7 @@
     -->
     <profiles>
        <profile>
-          <id>default</id>
+          <id>production</id>
           <activation>
              <activeByDefault>true</activeByDefault>
           </activation>
