--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -56,7 +56,9 @@ eseal.validation.lotl.extra.truststore.password=extra-tl
 # extra lotl truststore type
 eseal.validation.lotl.extra.truststore.type=JKS
 
-eseal.manual.truststore.enabled=true
+# this allows manually including trusted certificates, in case LOTL list is not enough
+# in some rare cases certificates won't have OCSP / AIA information included
+eseal.manual.truststore.enabled=false
 eseal.manual.truststore.file=classpath:eseal_trusted.jks
 eseal.manual.truststore.password=password
 
