--- a/eseal/pom.xml
+++ b/eseal/pom.xml
@@ -138,6 +138,24 @@
 
     </dependencies>
 
+    <profiles>
+       <profile>
+          <id>default</id>
+          <activation>
+             <activeByDefault>true</activeByDefault>
+          </activation>
+          <properties>
+             <remote-provider-host>rsign-api.harica.gr</remote-provider-host>
+          </properties>
+       </profile>
+       <profile>
+          <id>harica-test-server</id>
+          <properties>
+             <remote-provider-host>rsign-api-dev.harica.gr</remote-provider-host>
+          </properties>
+       </profile>
+    </profiles>
+    
     <build>
         <plugins>
             <plugin>
@@ -205,8 +223,35 @@
                     </execution>
                 </executions>
             </plugin>
-
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <foo>bar</foo>
+                </configuration>
+            </plugin>
+        
         </plugins>
+        
+        <resources>
+           <resource>
+              <directory>src/main/resources</directory>
+              <filtering>true</filtering>
+              <includes>
+                 <include>application.properties</include>
+              </includes>
+           </resource>
+           <resource>
+              <directory>src/main/resources</directory>
+              <filtering>false</filtering>
+              <excludes>
+                 <exclude>application.properties</exclude>
+              </excludes>
+           </resource>	         		
+        </resources>
+        
     </build>
 
 </project>
