--- a/eseal/src/test/resources/application.properties
+++ b/eseal/src/test/resources/application.properties
@@ -1,4 +1,6 @@
-# Configuration values that are needed for th remove provider http client
+logging.level.root=INFO
+
+# Configuration values that are needed for the remote provider's http client
 # remote provider rest api endpoint
 eseal.remote.provider.endpoint=rsign-api-dev.harica.gr
 # remote provider enable retry on failed requests
@@ -9,20 +11,21 @@ eseal.remote.provider.retry.counter=3
 eseal.remote.provider.retry.interval=5
 # remote provider http client connection options(passed to underlying apache http client)
 # used for both pkcs1 service data loaders and remote provider http client (in ms)
-eseal.remote.provider.socket.connect.timeout = 6000
-eseal.remote.provider.connect.timeout = 6000
-eseal.remote.provider.request.connect.timeout = 6000
+eseal.remote.provider.socket.connect.timeout = 60000
+eseal.remote.provider.connect.timeout = 60000
+eseal.remote.provider.request.connect.timeout = 60000
 # remote provider time threshold that indicates that we should generate a new totp token
 # for time values lower than the threshold
 eseal.remote.provider.totp.refresh.seconds.wait=5
-# remote provider client truststore that contains the API's certs
+# remote provider verify the API certs
+eseal.remote.provider.tls.verify=true
+# remote provider client truststore that contains the API certs
 eseal.remote.provider.truststore.file=remote_provider_http_eseal_client.truststore.jks
 # remote provider client truststore password to access
 eseal.remote.provider.truststore.password=providerpass
 # remote provider client truststore type
 eseal.remote.provider.truststore.type=JKS
-# remote provider verify the API certs
-eseal.remote.provider.tls.verify=true
+
 #### Validation properties #####
 # official journal client keystore
 eseal.validation.oj.keystore.filename=oj.keystore.p12
@@ -41,26 +44,45 @@ eseal.validation.lotl.refresh.initial.delay=0
 # online refresh interval for the lotl sources in milliseconds
 eseal.validation.lotl.refresh.interval=21600000
 # lotl trust sources filesystem cache
-eseal.validation.lotl.cache.dir=/etc/eseal/conf.d/
+eseal.validation.lotl.cache.dir=/tmp
 # truststore containing extra trust certs needed during the initialization of the LOTL source
 eseal.validation.lotl.extra.truststore.file=extra-lotl.truststore.jks
 # extra lotl truststore password
 eseal.validation.lotl.extra.truststore.password=extra-tl
 # extra lotl truststore type
 eseal.validation.lotl.extra.truststore.type=JKS
+
+# this allows manually including trusted certificates, in case LOTL list is not enough
+# in some rare cases certificates won't have OCSP / AIA information included
+eseal.manual.truststore.enabled=false
+eseal.manual.truststore.file=classpath:eseal_trusted.jks
+eseal.manual.truststore.password=password
+
 ### Timestamping Provider properties ###
 
 ##### APED #####
-eseal.tsp.aped.url=https://timestamp.aped.gov.gr/qtss
+# aped tsa url
+eseal.tsa.aped.url=https://timestamp.aped.gov.gr/qtss
+# aped tsa truststore type
 eseal.tsa.aped.truststore.type=JKS
+# aped tsa truststore file
 eseal.tsa.aped.truststore.file=aped.truststore.jks
+# aped tsa truststore password
 eseal.tsa.aped.truststore.password=apedts
 
 ##### HARICA #####
+# harica tsa url
 eseal.tsa.harica.url=https://qts.harica.gr
+# harica tsa truststore type
 eseal.tsa.harica.truststore.type=JKS
+# harica tsa truststore file
 eseal.tsa.harica.truststore.file=harica.truststore.jks
+# harica tsa truststore password
 eseal.tsa.harica.truststore.password=harica-qtsa
+# harica tsa host
 eseal.tsa.harica.host=qts.harica.gr
-eseal.tsa.harica.username=test-user
-eseal.tsa.harica.password=test-pass
+# harica tsa basic auth username
+eseal.tsa.harica.username=STE
+# harica tsa basic auth password
+eseal.tsa.harica.password=xRJbYDn7tgP8mhIhdN6te3oDo5UUKJY7
+eseal.tsa.harica.primary=true
