--- a/eseal/src/main/resources/application.properties
+++ b/eseal/src/main/resources/application.properties
@@ -1,20 +1,23 @@
 # Filesystem configuration path, for the application properties file
 spring.config.import=optional:file:/etc/eseal/conf.d/application.properties
 
+server.port=@server.port@
+logging.level.root=INFO
+
 # Configuration values that are needed for the remote provider's http client
 # remote provider rest api endpoint
-eseal.remote.provider.endpoint=test.provider.com
+eseal.remote.provider.endpoint=@remote.provider.host@
 # remote provider enable retry on failed requests
-eseal.remote.provider.retry.enabled=true
+eseal.remote.provider.retry.enabled=@retry.enabled@
 # remote provider how many times we should retry failed requests
 eseal.remote.provider.retry.counter=3
 # remote provider how much time should the client wait before the next retry in seconds
 eseal.remote.provider.retry.interval=5
 # remote provider http client connection options(passed to underlying apache http client)
-# used for both pkcs1 service data loaders and remote provider http client
-eseal.remote.provider.socket.connect.timeout = 60
-eseal.remote.provider.connect.timeout = 60
-eseal.remote.provider.request.connect.timeout = 60
+# used for both pkcs1 service data loaders and remote provider http client (in ms)
+eseal.remote.provider.socket.connect.timeout = 60000
+eseal.remote.provider.connect.timeout = 60000
+eseal.remote.provider.request.connect.timeout = 60000
 # remote provider time threshold that indicates that we should generate a new totp token
 # for time values lower than the threshold
 eseal.remote.provider.totp.refresh.seconds.wait=5
@@ -53,6 +56,12 @@ eseal.validation.lotl.extra.truststore.password=extra-tl
 # extra lotl truststore type
 eseal.validation.lotl.extra.truststore.type=JKS
 
+# this allows manually including trusted certificates, in case LOTL list is not enough
+# in some rare cases certificates won't have OCSP / AIA information included
+eseal.manual.truststore.enabled=false
+eseal.manual.truststore.file=classpath:eseal_trusted.jks
+eseal.manual.truststore.password=password
+
 ### Timestamping Provider properties ###
 
 ##### APED #####
@@ -80,3 +89,4 @@ eseal.tsa.harica.host=qts.harica.gr
 eseal.tsa.harica.username=STE
 # harica tsa basic auth password
 eseal.tsa.harica.password=xRJbYDn7tgP8mhIhdN6te3oDo5UUKJY7
+eseal.tsa.harica.primary=true
